hw4_ws/log/build_2024-03-03_17-38-46/calculator/stderr.log
  File "/home/vboxuser/hw4_ws/install/calculator/lib/python3.10/site-packages/calculator/calculator.py", line 89
    int name_position = 1   
        ^^^^^^^^^^^^^
SyntaxError: invalid syntax

